--- a/Planwerk/package.json
+++ b/Planwerk/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && touch dist/.nojekyll"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
